# Test-2

./: ConsoleApplication6.cpp  README.md
和yzw同学弄得有相机的_text/: CMakeLists.txt  main.cpp
和yzw同学弄得有相机的_text/Camera/: GXcamera.cpp  GXcamera.h
和yzw同学弄得有相机的_text/Camera/include/: DxImageProc.h  GxIAPI.h
和yzw同学弄得有相机的_text/detector/: detector.cpp  detector.h
